Traffic-Management-Basics/ms-demo/08-http-retry/virtualservice-frontend.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - "fe.magedu.com"
  - "frontend.magedu.com"
  - "frontend"
  gateways:
  - frontend-gateway
  - mesh
  http:
  - name: default
    route:
    - destination:
        host: frontend
    timeout: 1s
    retries:
      attempts: 5
      perTryTimeout: 1s
      retryOn: 5xx,connect-failure,refused-stream
